--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -13,11 +13,19 @@
   align-content: center;
 }
 
+.nav-list-li {
+  list-style-type: none;
+}
+
 .nav-list-element {
   text-decoration: none;
   font-size: 1.5em;
   color: black;
   font-family: "Fondamento", cursive;
+}
+
+.active {
+  text-decoration: underline #ffc7c2;
 }
 
 .nav-list-element:hover {
@@ -28,13 +36,4 @@
   height: 7vw;
   width: 7vw;
   background-size: contain;
-}
-
-.cart-icon {
-  position: fixed;
-  cursor: pointer;
-  right: 0;
-  bottom: 2vw;
-  z-index: 999;
-  font-size: 3vw;
 }
