--- a/src/components/Image/image.css
+++ b/src/components/Image/image.css
@@ -29,6 +29,15 @@
   height: 4vw;
 }
 
+.icon {
+  height: 5vw;
+}
+
+.insta-icon {
+  height: 4.2vw;
+  margin: 1vw;
+}
+
 @media only screen and (max-width: 450px) {
   .awardImage {
     height: 10vw;
