--- a/src/sections/about-sections/about-stroke/about-stroke.css
+++ b/src/sections/about-sections/about-stroke/about-stroke.css
@@ -1,69 +1,34 @@
-.about-stroke-container {
-  margin: 10vw 0;
+.about-contact-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 25%;
+  border: 4px solid #ffc7c2;
+  padding: 2vw 4vw;
 }
 
-.timeline {
-  background-image: url("../../../images/stroke.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 50vw;
-  background-position: right;
-}
-
-.about-circle-container {
-  background-image: url("../../../images/timeline.svg");
-  height: 40vw;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.text {
+.about-timeline-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  width: 85%;
+  align-items: center;
+  justify-content: space-around;
+  width: 70%;
+  margin: 5vw auto;
 }
 
-.text p {
-  font-size: 1.2vw;
-  border: 3px solid #ffd2ce;
-  height: fit-content;
-  padding: 0.4vw;
+.timeline-container {
+  background-image: url("../../../images/timeline.svg");
+  height: 25vw;
+  width: 25vw;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
-.text p:nth-child(1) {
-  float: left;
-  width: 20%;
-  text-align: center;
-  margin: 0 8vw 0vw 12vw;
-}
-
-.text p:nth-child(2) {
-  width: 20%;
-  text-align: center;
-  margin: 4vw 10vw 10vw 0;
-  border: none;
-}
-
-.text p:nth-child(3) {
-  width: 20%;
-  text-align: center;
-  margin-top: 0;
-}
-
-.text p:nth-child(4) {
-  width: 29%;
-  text-align: center;
-  margin: 10vw 0 0 67vw;
-  border: none;
-}
-
-.text p:nth-child(5) {
-  width: 30%;
-  text-align: center;
-  border: 3px solid #ffa69e;
-  margin: 3vw 0 0 11vw;
-  padding: 1vw;
-  font-size: 1.5vw;
+.icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
