--- a/src/components/Image/image.css
+++ b/src/components/Image/image.css
@@ -38,6 +38,10 @@
   margin: 1vw;
 }
 
+.p-choice-image {
+  max-height: 10vw;
+}
+
 @media only screen and (max-width: 450px) {
   .awardImage {
     height: 10vw;
