--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -72,7 +72,7 @@
 .p-game-container {
   width: 45%;
   text-align: center;
-  margin: auto;
+  margin: 0 auto 5vw auto;
   border: 2px solid #ffd2ce;
   padding: 2vw;
 }
