--- a/src/components/ShoppingCart/shoppingCart.css
+++ b/src/components/ShoppingCart/shoppingCart.css
@@ -14,6 +14,15 @@
   cursor: pointer;
   margin: 1vw 1vw 1vw 3vw;
 }
+
+.oneItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  min-width: 70%;
+  border-bottom: 1px solid #fec8c4;
+}
 /* 
 .cart-icon {
     position: fixed;
