--- a/src/sections/homepage-sections/Banner/banner.css
+++ b/src/sections/homepage-sections/Banner/banner.css
@@ -66,12 +66,13 @@
     height: 25vw;
   }
 
-  .hidden {
+  .banner .hidden {
     font-family: "Fondamento", cursive;
-    font-size: 1.2em;
+    font-size: 4vw;
     opacity: 1;
+    position: static;
   }
-  .thin {
+  .banner .thin {
     font-size: smaller;
     font-family: "Lato", sans-serif;
     margin-top: 0;
