--- a/src/sections/homepage-sections/Contact/contact.css
+++ b/src/sections/homepage-sections/Contact/contact.css
@@ -7,10 +7,17 @@
   margin-bottom: 5vw;
 }
 
-.contact-text h1 {
+.h1-header {
   z-index: 99;
   text-align: center;
   margin: 3vw auto;
   width: 90%;
-  font-size: 2em;
+  font-size: 2.5vw;
+}
+
+@media only screen and (max-width: 450px) {
+  .h1-header {
+    font-size: 6vw;
+    width: 100%;
+  }
 }
