--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -22,9 +22,12 @@
   background-color: #fec8c4;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 890px) {
   .contactForm-button {
     width: fit-content;
     height: fit-content;
   }
+}
+
+@media only screen and (max-width: 450px) {
 }
