--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,7 +2,7 @@
   border: 7px white solid;
   background-color: #ffa69e49;
   width: 10vw;
-  height: 15vw;
+  min-height: 15vw;
   margin: 1vw;
   padding: 0.5vw;
   text-align: center;
@@ -26,6 +26,7 @@
   align-items: center;
   justify-content: center;
   z-index: 1;
+  min-height: 20vw;
 }
 
 .product-card:hover {
@@ -76,10 +77,66 @@
   padding: 2vw;
 }
 
+@media only screen and (max-width: 1000px) {
+  .stroke-card {
+    height: 20vw;
+    width: 12vw;
+  }
+}
+
+@media only screen and (max-width: 890px) {
+  .stroke-card {
+    height: 25vw;
+    width: 15vw;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .product-card {
+    min-height: 23vw;
+    min-width: 15vw;
+  }
+
+  .stroke-card {
+    min-height: 25vw;
+    min-width: 20vw;
+  }
+}
+@media only screen and (max-width: 660px) {
+  .about-contact-container .timeline-card {
+    min-height: 30vw;
+    min-width: 40vw;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  .stroke-card {
+    height: 30vw;
+    width: 20vw;
+  }
+
+  .product-card {
+    min-height: 25vw;
+  }
+  .product-card:hover {
+    width: 25vw;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .stroke-card {
+    height: 35vw;
+    width: 25vw;
+  }
+  .product-card {
+    min-height: 30vw;
+    min-width: 25vw;
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .stroke-card {
     width: 30vw;
-    height: 35vw;
     padding: 3vw;
   }
 
@@ -110,7 +167,7 @@
     height: fit-content;
     min-height: 40vw;
     width: fit-content;
-    min-width: 50vw;
+    min-width: 70vw;
     padding: 2vw;
   }
 
