--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,6 +1,6 @@
 .nav-bar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 2vw;
 }
@@ -9,12 +9,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 30%;
   align-content: center;
+  padding: 0;
+  width: 50%;
 }
 
 .nav-list-li {
   list-style-type: none;
+  margin: 0 2vw;
 }
 
 .nav-list-element {
@@ -38,6 +40,23 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+}
+
+@media only screen and (max-width: 675px) {
+  .nav-list {
+    width: fit-content;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .nav-logo {
+    opacity: 0;
+    position: absolute;
+  }
+
+  .nav-bar {
+    justify-content: center;
+  }
 }
 
 @media only screen and (max-width: 450px) {
