--- a/src/sections/checkout-sections/checkout-container/Checkout-container.css
+++ b/src/sections/checkout-sections/checkout-container/Checkout-container.css
@@ -14,6 +14,18 @@
   flex-direction: column;
 }
 
+@media only screen and (max-width: 1000px) {
+  .checkout {
+    height: 70vh;
+  }
+  .c-container {
+    height: 80%;
+  }
+  .c-container {
+    height: inherit;
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .checkout {
     height: 90vh;
