--- a/src/sections/homepage-sections/Pen/pen.css
+++ b/src/sections/homepage-sections/Pen/pen.css
@@ -4,8 +4,9 @@
   justify-content: space-around;
   align-items: flex-start;
   width: 77%;
-  margin: 7vw auto 0 auto;
+  margin: 7vw auto 2vw auto;
   z-index: 99;
+  height: fit-content;
 }
 .pen-picture-container,
 .feature-image-container {
@@ -13,6 +14,15 @@
   z-index: 1;
 }
 
+@media only screen and (max-width: 660px) {
+  .feature-images {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
 @media only screen and (max-width: 450px) {
   .pen {
     visibility: hidden;
