--- a/src/sections/homepage-sections/Products/products.css
+++ b/src/sections/homepage-sections/Products/products.css
@@ -15,6 +15,7 @@
 .product-card-text {
   text-decoration: none;
   color: black;
+  text-align: center;
 }
 
 .product-heading {
@@ -27,6 +28,12 @@
   height: fit-content;
   width: fit-content;
   z-index: 999;
+}
+
+@media only screen and (max-width: 680px) {
+  .product-container {
+    width: 90%;
+  }
 }
 
 @media only screen and (max-width: 450px) {
