--- a/src/sections/portfolio-sections/Choices/choices.css
+++ b/src/sections/portfolio-sections/Choices/choices.css
@@ -20,6 +20,7 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #fec8c4;
+  flex-wrap: wrap;
 }
 
 .buttonContainer {
@@ -51,7 +52,7 @@
   font-weight: bold;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 650px) {
   .p-choices-container {
     flex-direction: column;
   }
@@ -67,7 +68,6 @@
   }
 
   .p-input-wrapper {
-    display: block;
     text-align: center;
   }
 }
