--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,25 @@ html {
   padding: 0;
   font-family: "Lato", sans-serif;
 }
+
+.h1-header {
+  z-index: 99;
+  text-align: center;
+  margin: 3vw auto;
+  width: 90%;
+  font-size: 2.5vw;
+}
+
+@media only screen and (max-width: 650px) {
+  .h1-header {
+    font-size: 5vw;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .h1-header {
+    font-size: 6vw;
+    width: 100%;
+  }
+}
