--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -6,9 +6,21 @@
   border: 5px white solid;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 700px) {
+  .p-choice-input {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  .p-choice-input {
+    width: 55%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
   .contactForm-input {
-    width: 90%;
+    width: 82vw;
     margin: auto;
   }
 }
