--- a/src/sections/portfolio-sections/Choices/choices.css
+++ b/src/sections/portfolio-sections/Choices/choices.css
@@ -51,15 +51,20 @@
   text-decoration: dotted 1px lightblue;
   font-weight: bold;
 }
-
-@media only screen and (max-width: 650px) {
-  .p-choices-container {
-    flex-direction: column;
-  }
-
+@media only screen and (max-width: 770px) {
   .p-choices-container .left {
     width: fit-content;
     flex-direction: column;
+  }
+
+  .p-input-wrapper {
+    margin: 5vw 0;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  .p-choices-container {
+    margin-bottom: 3vw;
   }
 
   .p-choices-container .right {
@@ -69,5 +74,12 @@
 
   .p-input-wrapper {
     text-align: center;
+    margin: 7vw 0;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .p-choices-container {
+    flex-direction: column;
   }
 }
