--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -9,14 +9,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-content: center;
+  align-items: center;
   padding: 0;
   width: 50%;
 }
 
 .nav-list-li {
   list-style-type: none;
-  margin: 0 2vw;
+  margin: 2vw;
+  text-align: center;
+  height: fit-content;
 }
 
 .nav-list-element {
@@ -35,8 +37,8 @@
 }
 .nav-logo {
   background-image: url("../../images/Call.png");
-  height: 3vw;
-  width: 9vw;
+  height: 7vw;
+  width: 7vw;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -63,6 +65,7 @@
   .nav-bar {
     justify-content: center;
     padding: 0;
+    min-height: 30vw;
   }
 
   .nav-logo {
@@ -74,9 +77,11 @@
     width: 90%;
     margin: auto;
     padding: 0;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 
   .nav-list-li {
-    margin: 0 1vw;
+    margin: 2vw 1vw;
   }
 }
