--- a/src/sections/homepage-sections/Textboxes/stroke.css
+++ b/src/sections/homepage-sections/Textboxes/stroke.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url("../../../images/stroke3.svg");
 }
 
 .card-container {
