--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -94,7 +94,7 @@
     min-width: 15vw;
   }
   .about-contact-container .timeline-card {
-    min-width: 30vw;
+    min-width: 35vw;
     min-height: 25vw;
   }
 }
@@ -143,6 +143,11 @@
     min-height: 30vw;
     min-width: 25vw;
   }
+
+  .about-contact-container .timeline-card {
+    min-height: 35vw;
+    min-width: 75vw;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -182,7 +187,7 @@
     padding: 2vw;
   }
   .about-contact-container .timeline-card {
-    min-height: 40vw;
+    min-height: 45vw;
     min-width: 80vw;
   }
 
