--- a/src/sections/about-sections/about-timeline/about-timeline.css
+++ b/src/sections/about-sections/about-timeline/about-timeline.css
@@ -73,6 +73,10 @@
   .about-timeline-container {
     width: 85%;
   }
+  .timeline-container {
+    height: 35vw;
+    width: 35vw;
+  }
 }
 
 @media only screen and (max-width: 660px) {
@@ -88,14 +92,16 @@
 @media only screen and (max-width: 550px) {
   .about-timeline-container {
     width: 100%;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  .about-timeline-container {
     flex-direction: column-reverse;
   }
 
+  .timeline-container {
+    height: 45vw;
+    width: 45vw;
+  }
+}
+
+@media only screen and (max-width: 480px) {
   .timeline-container {
     height: 55vw;
     width: 55vw;
